5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1638_2728.log
== TEST (2019-04-13 15:53:02) 
-- CODE:
p = float(input("Digite o percuro em km: "))
c = input("Digite o tipo de carro (A ou B: "). upper()
# A = 8 km por litro 
# B = 12 km por litro

if(A):
	x = p / 8
	print(x)
else:
	x = p / 12
	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:53:08) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B: "). upper()
# A = 8 km por litro 
# B = 12 km por litro

if(A):
	x = p / 8
	print(x)
else:
	x = p / 12
	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:53:17) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()
# A = 8 km por litro 
# B = 12 km por litro

if(A):
	x = p / 8
	print(x)
else:
	x = p / 12
	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:53:59) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(x)
else:
	x = p / 12
	print(x)

-- OUTPUT:
8.125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:54:06) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(x)
else:
	x = p / 12
	print(x)

-- EXECUTION TIME:
0.131432
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
8.125
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:54:44) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(round(x,2))
else:
	x = p / 12
	print(round(x,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:54:51) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(round(x,2))
else:
	x = p / 12
	print(round(x,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:55:24) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(round(x,2))
else:
	y = p / 12
	print(round(y,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:55:31) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(round(x,2))
else:
	y = p / 12
	print(round(y,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:56:28) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(round(x,2))
if("B"):
	y = p / 12
	print(round(y,2))

-- OUTPUT:
8.12
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:56:49) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(round(x,2))

if("B"):
	y = p / 12
	print(round(y,2))

-- OUTPUT:
8.12
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:57:16) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if("A"):
	x = p / 8
	print(round(x,2))

else:
	y = p / 12
	print(round(y,2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:58:23) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if(c =="A"):
	x = p / 8
	print(round(x,2))

else:
	y = p / 12
	print(round(y,2))

-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:58:32) 
-- CODE:
p = float(input("Digite o percurso em km: "))
c = input("Digite o tipo de carro (A ou B): "). upper()

if(c =="A"):
	x = p / 8
	print(round(x,2))

else:
	y = p / 12
	print(round(y,2))

-- EXECUTION TIME:
0.188942
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
